# stylish-onnx

./: .gitignore  README.md  main.py  pyproject.toml
examples/: simple.py  with_phonemes.py
src/stylish_onnx/: __init__.py
